extends Control

## GameMenu - –≥–æ–ª–æ–≤–Ω–µ –º–µ–Ω—é –≥—Ä–∏
## –í–∏–∫–æ—Ä–∏—Å—Ç–æ–≤—É—î —Ç–∞–∫—É –∂ –ª–æ–≥—ñ–∫—É —è–∫ vertical_menu: –æ–¥–Ω–æ—á–∞—Å–Ω–æ —Ç—ñ–ª—å–∫–∏ –æ–¥–Ω–∞ –ø–∞–Ω–µ–ª—å –≤–∏–¥–∏–º–∞

# –ü–æ—Å–∏–ª–∞–Ω–Ω—è –Ω–∞ –≤—É–∑–ª–∏ (–º–æ–≥—É—Ç –±—ã—Ç—å –≤ —Ä–∞–∑–Ω—ã—Ö –º–µ—Å—Ç–∞—Ö –≤ –∑–∞–≤–∏—Å–∏–º–æ—Å—Ç–∏ –æ—Ç —Å—Ç—Ä—É–∫—Ç—É—Ä—ã —Å—Ü–µ–Ω—ã)
@onready var tab_buttons_container: VBoxContainer = get_node_or_null("VBoxContainer")
@onready var content_container: Control = get_node_or_null("ContentContainer")
@onready var game_menu_content = get_node_or_null("GameMenuContent")
@onready var vertical_menu = get_node_or_null("GameMenuContent/VerticalMenu")

# –ú–∞—Å–∏–≤ –∫–Ω–æ–ø–æ–∫ —Ç–∞ –ø–∞–Ω–µ–ª–µ–π –∫–æ–Ω—Ç–µ–Ω—Ç—É
var tab_buttons: Array[Button] = []
var content_panels: Array[Dictionary] = []  # [{"name": "Inventory", "content": Control}, ...]

# –ü–æ—Ç–æ—á–Ω–∞ –∞–∫—Ç–∏–≤–Ω–∞ –≤–∫–ª–∞–¥–∫–∞
var current_tab_name: String = "Inventory":
	set(value):
		if value != current_tab_name:
			current_tab_name = value
			_update_visibility()
			_update_button_states()

func _ready() -> void:
	add_to_group("game_menu")
	process_mode = Node.PROCESS_MODE_WHEN_PAUSED
	
	# –ü—Ä–æ–≤–µ—Ä—è–µ–º –¥–æ—Å—Ç—É–ø–Ω–æ—Å—Ç—å ServiceLocator
	# ServiceLocator - —ç—Ç–æ autoload, –¥–æ—Å—Ç—É–ø–µ–Ω –Ω–∞–ø—Ä—è–º—É—é —á–µ—Ä–µ–∑ –∏–º—è
	# –í Godot autoload –¥–æ—Å—Ç—É–ø–µ–Ω –Ω–∞–ø—Ä—è–º—É—é —á–µ—Ä–µ–∑ –∏–º—è, –∞ –Ω–µ —á–µ—Ä–µ–∑ Engine.get_singleton()
	var service_locator = null
	# –ü—Ä–æ–±—É—î–º–æ –ø—Ä—è–º–∏–π –¥–æ—Å—Ç—É–ø –¥–æ autoload —á–µ—Ä–µ–∑ —ñ–º'—è (–Ω–∞–π–Ω–∞–¥—ñ–π–Ω—ñ—à–∏–π —Å–ø–æ—Å—ñ–±)
	if has_node("/root/ServiceLocator"):
		service_locator = get_node("/root/ServiceLocator")
	elif get_tree().root.has_node("ServiceLocator"):
		service_locator = get_tree().root.get_node("ServiceLocator")
	else:
		# Fallback: –ø—ã—Ç–∞–µ–º—Å—è –ø–æ–ª—É—á–∏—Ç—å —á–µ—Ä–µ–∑ Engine (–¥–ª—è —Å–æ–≤–º–µ—Å—Ç–∏–º–æ—Å—Ç–∏)
		if Engine.has_singleton("ServiceLocator"):
			service_locator = Engine.get_singleton("ServiceLocator")
	
	if not service_locator:
		# –í–∏–∫–æ—Ä–∏—Å—Ç–æ–≤—É—î–º–æ push_warning –∑–∞–º—ñ—Å—Ç—å push_error, —â–æ–± –Ω–µ –±–ª–æ–∫—É–≤–∞—Ç–∏ —Ä–æ–±–æ—Ç—É –º–µ–Ω—é
		push_warning("‚ö†Ô∏è GameMenu: ServiceLocator not found! Make sure it's in autoload. Continuing without ServiceLocator...")
		# –ù–µ –≤–æ–∑–≤—Ä–∞—â–∞–µ–º—Å—è, –ø—Ä–æ–¥–æ–ª–∂–∞–µ–º —Ä–∞–±–æ—Ç—É –±–µ–∑ ServiceLocator
	
	# –ò—â–µ–º VerticalMenu —á–µ—Ä–µ–∑ GameMenuContent (–ø—Ä–∞–≤–∏–ª—å–Ω–∞—è —Å—Ç—Ä—É–∫—Ç—É—Ä–∞: BaseMenu -> CentralPanel -> GameMenuContent -> VerticalMenu)
	if game_menu_content:
		var content_vertical_menu = game_menu_content.get_node_or_null("VerticalMenu")
		if content_vertical_menu:
			vertical_menu = content_vertical_menu
			print("üéÆ GameMenu: Found VerticalMenu through GameMenuContent")
	
	# –ï—Å–ª–∏ VerticalMenu –Ω–µ –Ω–∞–π–¥–µ–Ω —á–µ—Ä–µ–∑ @onready, –ø—Ä–æ–±—É–µ–º –Ω–∞–π—Ç–∏ —á–µ—Ä–µ–∑ BaseMenu
	if not vertical_menu:
		var base_menu = get_node_or_null("BaseMenu")
		if base_menu:
			var central_panel = base_menu.get_node_or_null("HBoxContainer/CentralPanel")
			if central_panel:
				var game_menu_content_node = central_panel.get_node_or_null("GameMenuContent")
				if game_menu_content_node:
					vertical_menu = game_menu_content_node.get_node_or_null("VerticalMenu")
					if vertical_menu:
						print("üéÆ GameMenu: Found VerticalMenu through BaseMenu -> CentralPanel -> GameMenuContent")
	
	# –ï—Å–ª–∏ –∏—Å–ø–æ–ª—å–∑—É–µ—Ç—Å—è GameMenuContent —Å VerticalMenu, –Ω–∞—Ö–æ–¥–∏–º –∫–Ω–æ–ø–∫–∏ —á–µ—Ä–µ–∑ VerticalMenu
	if vertical_menu:
		var panel_manager = vertical_menu.get_node_or_null("PanelManager")
		if panel_manager:
			var buttons_container = panel_manager.get_node_or_null("HBoxContainer/TabButtons")
			if buttons_container:
				for child in buttons_container.get_children():
					if child is Button:
						tab_buttons.append(child)
						print("üéÆ GameMenu: Found button: ", child.name)
	
	# –°–æ–±–∏—Ä–∞–µ–º –∫–Ω–æ–ø–∫–∏ –∏ –ø–∞–Ω–µ–ª–∏ –∏–∑ –æ—Å–Ω–æ–≤–Ω–æ–π —Å—Ç—Ä—É–∫—Ç—É—Ä—ã
	_collect_tab_buttons()
	_collect_content_panels()
	
	# –í–ê–ñ–ù–û: –£–±–µ–∂–¥–∞–µ–º—Å—è, —á—Ç–æ –≤—Å–µ –ø–∞–Ω–µ–ª–∏ —Å–∫—Ä—ã—Ç—ã –ø–µ—Ä–µ–¥ —É—Å—Ç–∞–Ω–æ–≤–∫–æ–π –Ω–∞—á–∞–ª—å–Ω–æ–≥–æ —Å–æ—Å—Ç–æ—è–Ω–∏—è
	# –ù–æ —Å–Ω–∞—á–∞–ª–∞ –ø–æ–∫–∞–∑—ã–≤–∞–µ–º InventoryPanel –≤ VerticalMenu
	if vertical_menu:
		var panel_manager = vertical_menu.get_node_or_null("PanelManager")
		if panel_manager:
			var hbox = panel_manager.get_node_or_null("HBoxContainer")
			if hbox:
				# –°–∫—Ä—ã–≤–∞–µ–º –≤—Å–µ –ø–∞–Ω–µ–ª–∏
				for child in hbox.get_children():
					if child is PanelContainer:
						child.visible = false
				# –ü–æ–∫–∞–∑—ã–≤–∞–µ–º InventoryPanel
				var inventory_panel = hbox.get_node_or_null("InventoryPanel")
				if inventory_panel:
					inventory_panel.visible = true
					print("üéÆ GameMenu: Made InventoryPanel visible")
	
	for panel_data in content_panels:
		if panel_data.content:
			panel_data.content.visible = false
	
	# –í—Å—Ç–∞–Ω–æ–≤–ª—é—î–º–æ –ø–æ—á–∞—Ç–∫–æ–≤–∏–π —Å—Ç–∞–Ω (—ç—Ç–æ –ø–æ–∫–∞–∂–µ—Ç —Ç–æ–ª—å–∫–æ Inventory - –ø–µ—Ä–≤–∞—è –≤–∫–ª–∞–¥–∫–∞)
	current_tab_name = "Inventory"
	_update_visibility()
	_update_button_states()
	
	print("üéÆ GameMenu: Initialized with ", tab_buttons.size(), " buttons and ", content_panels.size(), " panels")
	print("üéÆ GameMenu: First tab is Inventory")

func _on_inventory_button_pressed() -> void:
	"""–û–±—Ä–∞–±–æ—Ç—á–∏–∫ –Ω–∞–∂–∞—Ç–∏—è –Ω–∞ –∫–Ω–æ–ø–∫—É Inventory –≤ VerticalMenu"""
	switch_to_tab("Inventory")

## –ó–±–∏—Ä–∞—î –≤—Å—ñ –∫–Ω–æ–ø–∫–∏ –∑ GameMenuContent/VerticalMenu
func _collect_tab_buttons() -> void:
	tab_buttons.clear()
	
	# –ò—â–µ–º –∫–Ω–æ–ø–∫–∏ –≤ VerticalMenu —á–µ—Ä–µ–∑ PanelManager
	if vertical_menu:
		var panel_manager = vertical_menu.get_node_or_null("PanelManager")
		if panel_manager:
			var buttons_container = panel_manager.get_node_or_null("HBoxContainer/TabButtons")
			if buttons_container:
				for child in buttons_container.get_children():
					if child is Button:
						tab_buttons.append(child)
						print("üéÆ GameMenu: Found button: ", child.name)
	
	# Fallback: –ø—Ä–æ–≤–µ—Ä—è–µ–º —Å—Ç–∞—Ä—É—é —Å—Ç—Ä—É–∫—Ç—É—Ä—É (–¥–ª—è –æ–±—Ä–∞—Ç–Ω–æ–π —Å–æ–≤–º–µ—Å—Ç–∏–º–æ—Å—Ç–∏)
	if tab_buttons.is_empty() and tab_buttons_container:
		for child in tab_buttons_container.get_children():
			if child is Button:
				tab_buttons.append(child)
				print("üéÆ GameMenu: Found button: ", child.name)

## –ó–±–∏—Ä–∞—î –≤—Å—ñ –ø–∞–Ω–µ–ª—ñ –∫–æ–Ω—Ç–µ–Ω—Ç—É –∑ GameMenuContent/VerticalMenu
func _collect_content_panels() -> void:
	content_panels.clear()
	
	# –ú–∞–ø–ø–∏–Ω–≥ –∏–º–µ–Ω –∫–æ–º–ø–æ–Ω–µ–Ω—Ç–æ–≤ –∫ –∏–º–µ–Ω–∞–º –≤–∫–ª–∞–¥–æ–∫
	var component_to_tab = {
		"InventoryComponent": "Inventory",
		"JournalComponent": "Journal",
		"EquipmentComponent": "Equipment",
		"MetSysMapComponent": "World Map",
		"ScrollContainer": "Status",  # ScrollContainer —Å–æ–¥–µ—Ä–∂–∏—Ç StatsComponent
		"OptionsComponent": "Misc"
	}
	
	# –ò—â–µ–º –∫–æ–º–ø–æ–Ω–µ–Ω—Ç—ã –≤ VerticalMenu —á–µ—Ä–µ–∑ PanelManager
	if vertical_menu:
		var panel_manager = vertical_menu.get_node_or_null("PanelManager")
		if panel_manager:
			var hbox_container = panel_manager.get_node_or_null("HBoxContainer")
			if hbox_container:
				# –ò—â–µ–º –ø–∞–Ω–µ–ª–∏ –∫–æ–Ω—Ç–µ–Ω—Ç–∞ –≤ HBoxContainer
				for child in hbox_container.get_children():
					if child is PanelContainer:
						# –ò—â–µ–º –∫–æ–º–ø–æ–Ω–µ–Ω—Ç—ã –≤–Ω—É—Ç—Ä–∏ –ø–∞–Ω–µ–ª–∏
						for panel_child in child.get_children():
							if panel_child.name in component_to_tab:
								var tab_name = component_to_tab[panel_child.name]
								content_panels.append({"name": tab_name, "content": panel_child})
								print("üéÆ GameMenu: Found panel: ", tab_name, " (", panel_child.name, ")")
								# –°—Ä–∞–∑—É —Å–∫—Ä—ã–≤–∞–µ–º –≤—Å–µ –ø–∞–Ω–µ–ª–∏
								panel_child.visible = false
							elif panel_child.name == "ScrollContainer":
								# ScrollContainer —Å–æ–¥–µ—Ä–∂–∏—Ç StatsComponent
								var stats_component = panel_child.get_node_or_null("StatsComponent")
								if stats_component:
									content_panels.append({"name": "Status", "content": panel_child})
									print("üéÆ GameMenu: Found Status panel (ScrollContainer)")
									panel_child.visible = false
	
	# Fallback: –ø—Ä–æ–≤–µ—Ä—è–µ–º —Å—Ç–∞—Ä—É—é —Å—Ç—Ä—É–∫—Ç—É—Ä—É ContentContainer (–¥–ª—è –æ–±—Ä–∞—Ç–Ω–æ–π —Å–æ–≤–º–µ—Å—Ç–∏–º–æ—Å—Ç–∏)
	if content_container and content_panels.is_empty():
		for child in content_container.get_children():
			if child.name in component_to_tab:
				var tab_name = component_to_tab[child.name]
				content_panels.append({"name": tab_name, "content": child})
				print("üéÆ GameMenu: Found panel: ", tab_name, " (", child.name, ")")
				child.visible = false
	
	# MetSysMapComponent —Ç–µ–ø–µ—Ä—å –Ω–∞—Ö–æ–¥–∏—Ç—Å—è –≤ VerticalMenu/PanelManager/HBoxContainer/WorldMapPanel
	# –ü—Ä–æ–≤–µ—Ä—è–µ–º —á–µ—Ä–µ–∑ vertical_menu
	if vertical_menu:
		var panel_manager = vertical_menu.get_node_or_null("PanelManager")
		if panel_manager:
			var map_panel = panel_manager.get_node_or_null("HBoxContainer/WorldMapPanel/MetSysMapComponent")
			if map_panel:
				content_panels.append({"name": "World Map", "content": map_panel})
				print("üéÆ GameMenu: Found MetSysMapComponent in WorldMapPanel")
				map_panel.visible = false

## –û–Ω–æ–≤–ª—é—î –≤–∏–¥–∏–º—ñ—Å—Ç—å –ø–∞–Ω–µ–ª–µ–π –∫–æ–Ω—Ç–µ–Ω—Ç—É
func _update_visibility() -> void:
	print("üéÆ GameMenu: _update_visibility() called, current_tab_name: ", current_tab_name)
	print("üéÆ GameMenu: content_panels size: ", content_panels.size())
	
	# –°–Ω–∞—á–∞–ª–∞ –ø–æ–∫–∞–∑—ã–≤–∞–µ–º/—Å–∫—Ä—ã–≤–∞–µ–º –ø–∞–Ω–µ–ª–∏ –≤ VerticalMenu —á–µ—Ä–µ–∑ PanelManager
	if vertical_menu:
		var panel_manager = vertical_menu.get_node_or_null("PanelManager")
		if panel_manager:
			var hbox = panel_manager.get_node_or_null("HBoxContainer")
			if hbox:
				# –ù–∞—Ö–æ–¥–∏–º –ø–∞–Ω–µ–ª—å, —Å–æ–æ—Ç–≤–µ—Ç—Å—Ç–≤—É—é—â—É—é —Ç–µ–∫—É—â–µ–π –≤–∫–ª–∞–¥–∫–µ
				var target_panel_name = ""
				match current_tab_name:
					"Inventory":
						target_panel_name = "InventoryPanel"
					"Equipment":
						target_panel_name = "EquipmentPanel"
					"World Map":
						target_panel_name = "WorldMapPanel"
					"Misc":
						target_panel_name = "MiscPanel"
					"Journal":
						target_panel_name = "JournalPanel"
					"Status":
						target_panel_name = "StatusPanel"
				
				# –ü–æ–∫–∞–∑—ã–≤–∞–µ–º –Ω—É–∂–Ω—É—é –ø–∞–Ω–µ–ª—å, —Å–∫—Ä—ã–≤–∞–µ–º –æ—Å—Ç–∞–ª—å–Ω—ã–µ
				for child in hbox.get_children():
					if child is PanelContainer:
						if child.name == target_panel_name:
							child.visible = true
							print("  ‚úÖ Showing panel: ", child.name)
						else:
							child.visible = false
							print("  ‚ùå Hiding panel: ", child.name)
	
	# –ó–∞—Ç–µ–º –æ–±–Ω–æ–≤–ª—è–µ–º –≤–∏–¥–∏–º–æ—Å—Ç—å –∫–æ–º–ø–æ–Ω–µ–Ω—Ç–æ–≤ –≤–Ω—É—Ç—Ä–∏ –ø–∞–Ω–µ–ª–µ–π
	for panel_data in content_panels:
		if panel_data.content:
			var should_be_visible = (panel_data.name == current_tab_name)
			panel_data.content.visible = should_be_visible
			
			if should_be_visible:
				print("  ‚úÖ Showing component: ", panel_data.name, " (", panel_data.content.name, ")")
			else:
				print("  ‚ùå Hiding component: ", panel_data.name, " (", panel_data.content.name, ")")
			
			# –°–ø–µ—Ü–∏–∞–ª—å–Ω–∞—è –æ–±—Ä–∞–±–æ—Ç–∫–∞ –¥–ª—è MapComponent
			if panel_data.name == "World Map" and panel_data.content.has_method("set_map_active"):
				# –í–ê–ñ–ù–û: –°–Ω–∞—á–∞–ª–∞ —É—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –≤–∏–¥–∏–º–æ—Å—Ç—å, –ø–æ—Ç–æ–º –≤—ã–∑—ã–≤–∞–µ–º set_map_active
				# –≠—Ç–æ –≥–∞—Ä–∞–Ω—Ç–∏—Ä—É–µ—Ç, —á—Ç–æ CanvasLayer –Ω–µ –±—É–¥–µ—Ç –≤–ª–∏—è—Ç—å –Ω–∞ layout –¥—Ä—É–≥–∏—Ö —ç–ª–µ–º–µ–Ω—Ç–æ–≤
				panel_data.content.visible = should_be_visible
				panel_data.content.set_map_active(should_be_visible)
				if should_be_visible and panel_data.content.has_method("update_map_visibility"):
					panel_data.content.update_map_visibility()

## –û–Ω–æ–≤–ª—é—î –≤—ñ–∑—É–∞–ª—å–Ω–∏–π —Å—Ç–∞–Ω –∫–Ω–æ–ø–æ–∫
func _update_button_states() -> void:
	# –ú–∞–ø–ø–∏–Ω–≥ –∏–º–µ–Ω –∫–Ω–æ–ø–æ–∫ –∫ –∏–º–µ–Ω–∞–º –≤–∫–ª–∞–¥–æ–∫
	var button_to_tab = {
		"InventoryButton": "Inventory",
		"JournalButton": "Journal",
		"EquipmentButton": "Equipment",
		"WorldMapButton": "World Map",
		"MiscButton": "Misc",
		"StatusButton": "Status",
		"SkillsButton": "Skills"
	}
	
	for button in tab_buttons:
		if button and button.name in button_to_tab:
			var tab_name = button_to_tab[button.name]
			button.button_pressed = (tab_name == current_tab_name)

## –û–±—Ä–æ–±–Ω–∏–∫–∏ –Ω–∞—Ç–∏—Å–∫–∞–Ω–Ω—è –∫–Ω–æ–ø–æ–∫ (–ø—ñ–¥–∫–ª—é—á–µ–Ω—ñ –≤ —Å—Ü–µ–Ω—ñ)
func _on_old_inventory_pressed() -> void:
	switch_to_tab("Inventory")

func _on_old_journal_pressed() -> void:
	switch_to_tab("Journal")

func _on_old_equipment_pressed() -> void:
	switch_to_tab("Equipment")

func _on_old_map_pressed() -> void:
	switch_to_tab("Map")

func _on_old_misc_pressed() -> void:
	switch_to_tab("Miscellaneous")

func _on_old_settings_pressed() -> void:
	# Settings –æ—Ç–∫—Ä—ã–≤–∞–µ—Ç—Å—è —á–µ—Ä–µ–∑ SettingsManager
	var service_locator = get_node_or_null("/root/ServiceLocator")
	var settings_manager = null
	if service_locator and service_locator.has_method("get_settings_manager"):
		settings_manager = service_locator.get_settings_manager()
	if settings_manager:
		settings_manager.open_settings(get_tree().root, true)  # true = popup —Ä–µ–∂–∏–º
	else:
		# Fallback –¥–æ –∑–≤–∏—á–∞–π–Ω–æ–≥–æ –ø–µ—Ä–µ–º–∏–∫–∞–Ω–Ω—è
		push_warning("‚ö†Ô∏è GameMenu: SettingsManager not found, falling back to tab switch")
		switch_to_tab("Settings")

## –ü–µ—Ä–µ–º–∏–∫–∞—î –Ω–∞ –≤–∫–ª–∞–¥–∫—É –∑–∞ —ñ–º'—è–º
func switch_to_tab(tab_name: String) -> void:
	print("üéÆ GameMenu: Switching to tab: ", tab_name)
	current_tab_name = tab_name

## –ó–∞–∫—Ä–∏–≤–∞—î –º–µ–Ω—é
func close_menu() -> void:
	var service_locator = get_node_or_null("/root/ServiceLocator")
	var menu_manager = null
	if service_locator and service_locator.has_method("get_menu_manager"):
		menu_manager = service_locator.get_menu_manager()
	if menu_manager:
		menu_manager.close_game_menu()
	else:
		push_warning("‚ö†Ô∏è GameMenu: MenuManager not found, cannot close menu properly")
		# Fallback: –ø—Ä–æ—Å—Ç–æ —Å–∫—Ä—ã–≤–∞–µ–º –º–µ–Ω—é
		visible = false
		get_tree().paused = false

func _check_managers() -> void:
	"""–ü—Ä–æ–≤–µ—Ä—è–µ—Ç –¥–æ—Å—Ç—É–ø–Ω–æ—Å—Ç—å –º–µ–Ω–µ–¥–∂–µ—Ä–æ–≤ –∏ –≤—ã–≤–æ–¥–∏—Ç –ø—Ä–µ–¥—É–ø—Ä–µ–∂–¥–µ–Ω–∏—è"""
	var service_locator = get_node_or_null("/root/ServiceLocator")
	var menu_manager = null
	if service_locator and service_locator.has_method("get_menu_manager"):
		menu_manager = service_locator.get_menu_manager()
	if not menu_manager:
		push_warning("‚ö†Ô∏è GameMenu: MenuManager not available yet")
	
	var settings_manager = null
	if service_locator and service_locator.has_method("get_settings_manager"):
		settings_manager = service_locator.get_settings_manager()
	if not settings_manager:
		push_warning("‚ö†Ô∏è GameMenu: SettingsManager not available yet")

func _input(event: InputEvent) -> void:
	# –û–±—Ä–æ–±–∫–∞ Escape –¥–ª—è –∑–∞–∫—Ä–∏—Ç—Ç—è –º–µ–Ω—é
	# –û—Å–∫—ñ–ª—å–∫–∏ –º–µ–Ω—é –º–∞—î process_mode = PROCESS_MODE_WHEN_PAUSED, –≤–æ–Ω–æ –º–æ–∂–µ –æ–±—Ä–æ–±–ª—è—Ç–∏ –≤–≤—ñ–¥ –Ω–∞–≤—ñ—Ç—å –Ω–∞ –ø–∞—É–∑—ñ
	if event is InputEventKey and event.keycode == KEY_ESCAPE and event.pressed:
		print("üéÆ GameMenu: Escape –Ω–∞—Ç–∏—Å–Ω—É—Ç–æ, –∑–∞–∫—Ä–∏–≤–∞—î–º–æ –º–µ–Ω—é...")
		close_menu()
		get_viewport().set_input_as_handled()
		return
	
	# –í–ê–ñ–ù–û: –ù–ï –≤–∏–∫–ª–∏–∫–∞—î–º–æ super._input() –∑ BaseMenu, —â–æ–± —É–Ω–∏–∫–Ω—É—Ç–∏ —Ä–µ–∫—É—Ä—Å—ñ—ó
	# BaseMenu._input() —Ç–∞–∫–æ–∂ –æ–±—Ä–æ–±–ª—è—î Escape, –∞–ª–µ –º–∏ –æ–±—Ä–æ–±–ª—è—î–º–æ –π–æ–≥–æ —Ç—É—Ç –Ω–∞–ø—Ä—è–º—É
